[package]
name = "quyaml"
version = "0.1.0"
authors = ["Vitaliy Pavlikov <warhotpoint@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "^0.4"
clap = { git = "https://github.com/clap-rs/clap" }
regex = "^1.3"
nom = "^5.1"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
# strip target/quyaml